# dotfiles

./: .flake8  .gitconfig  .gitignore  .tmux.conf  .vimrc  .vimrc.apperance  .vimrc.basic  .vimrc.bundle  .vimrc.colors  .vimrc.completion  .vimrc.completion.neocomplcache  .vimrc.dein  .vimrc.editing  .vimrc.encoding  .vimrc.gitlogviewer  .vimrc.indent  .vimrc.misc  .vimrc.moving  .vimrc.plugins_setting  .vimrc.search  .vimrc.statusline  .zshrc  .zshrc.alias  .zshrc.osx  README.md  dein.toml  dein_lazy.toml  setup.sh
.codex/: .gitignore  AGENTS.md  config.toml
.config/vim/: .netrwhist  .vimrc.apperance  .vimrc.completion  .vimrc.completion.neocomplcache  .vimrc.indent  .vimrc.search  vimrc
.config/zsh/: .zcompdump  .zshenv  .zshrc  .zshrc.alias  .zshrc.osx
agents_docs/python-team-sample/: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  pyproject.toml
agents_docs/python-team-sample/.github/workflows/: todo.yml
nvim/: .nvimrc  .vimrc  init.vim
vim/: .vimrc  .vimrc.bundle  .vimrc.colors  .vimrc.editing
